Fixed sizing issues on smaller devices other pages

--- a/style/contact.css
+++ b/style/contact.css
@@ -312,16 +312,28 @@ footer a {
 
   nav {
     width: 0vw;
-    height: 100%;
+    height: 100vh;
+    background-color: #5c5c5c;
+    color: #ffffff;
+    display: flex;
+    flex-flow: column nowrap;
+    position: absolute;
+    right: 0;
+    left: 100%;
+    box-shadow: 0 0 10px #acacac34;
+    z-index: 2;
+    transition: .4s ease-out;
 }
-  nav a {
+
+nav a {
     font-size: 3rem;
-    padding: 2% 0;
-  }
+    font-weight: 700;
+    padding: 5% 0 5% 5%;
+}
 
 .show {
-    width: 20vw;
-    left: 80%;
+    width: 40vw;
+    left: 60%;
 }
 
   main {
@@ -339,7 +351,7 @@ footer a {
 }
 
 .change .burger {
-  margin-right: 20%;
+  margin-right: 60%;
 }
 
   main h1 {
