--- a/style/index.css
+++ b/style/index.css
@@ -446,7 +446,6 @@ footer a {
     nav {
         width: 0vw;
         height: 100vh;
-        
         background-color: #5c5c5c;
         color: #ffffff;
         display: flex;
@@ -458,10 +457,16 @@ footer a {
         z-index: 2;
         transition: .4s ease-out;
     }
+
+    nav a {
+        font-size: 3rem;
+        font-weight: 700;
+        padding: 5% 0 5% 5%;
+    }
     
     .show {
-        width: 20vw;
-        left: 80%;
+        width: 40vw;
+        left: 60%;
     }
 
     .viewport-header .text-container {
@@ -494,7 +499,7 @@ footer a {
     }
     
     .change .burger {
-        margin-right: 20%;
+        margin-right: 60%;
     }
 
     .viewport-header h1 {
