--- a/style/projects.css
+++ b/style/projects.css
@@ -366,18 +366,30 @@ footer a {
     font-size: 50%;
 }
 
-nav {
+nnav {
   width: 0vw;
-  height: 100%;
+  height: 100vh;
+  background-color: #5c5c5c;
+  color: #ffffff;
+  display: flex;
+  flex-flow: column nowrap;
+  position: absolute;
+  right: 0;
+  left: 100%;
+  box-shadow: 0 0 10px #acacac34;
+  z-index: 2;
+  transition: .4s ease-out;
 }
+
 nav a {
-  font-size: 2rem;
-  padding: 2% 0;
+  font-size: 3rem;
+  font-weight: 700;
+  padding: 5% 0 5% 5%;
 }
 
 .show {
-  width: 20vw;
-  left: 80%;
+  width: 40vw;
+  left: 60%;
 }
 
 main {
@@ -394,7 +406,7 @@ transition: .5s;
 }
 
 .change .burger {
-margin-right: 20%;
+  margin-right: 60%;
 }
 
 main h1 {
